--- a/app/views/shared/_record_controls.html.erb
+++ b/app/views/shared/_record_controls.html.erb
@@ -1,10 +1,10 @@
-<div class="record_controls_container">
+<div class="record_controls_container" data-top="50" data-bottom="40">
   <div class="record_controls">
     <div class="row collapse">
-      <div class="large-4 medium-4 columns">
+      <div class="large-3 medium-3 columns">
         <h4><%= yield :breadcrumbs %></h4>
       </div>
-      <div class="large-8 medium-8 columns">
+      <div class="large-9 medium-9 columns">
         <div class="row">
           <div class="large-12 columns">
             <ul class="inline-list">
