--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,16 +28,19 @@
 </head>
 <body class="<%= @body_class %>">
   <!-- Header -->
-  <div class="row">
-    <header>
-      <div class="large-12 columns">
-        <%= link_to 'Primero', root_path, :class => 'logo left', id: "RapidFTR logo" %>
-        <div class="sublogo">Protection-related information management</div>
-        <div class="right">
-          <%= render :partial => "shared/header_links" %>
+  <div class="header_container">
+    <div class="row">
+      <header>
+        <div class="large-12 columns">
+          <%= link_to 'Primero', root_path, :class => 'logo left', id: "RapidFTR logo" %>
+          <div class="sublogo">Protection-related information management</div>
+          <%= image_tag('agency_logos.jpg', class: 'agency_logos') %>
+          <div class="right">
+            <%= render :partial => "shared/header_links" %>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
+    </div>
   </div>
   <!-- End Header -->
   <!-- Nav -->
