--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -1,6 +1,21 @@
+<div class="index_controls_container" data-top="50" data-bottom="40">
+  <div class="row">
+    <div class="large-9 columns">
+      <div class="row">
+        <div class="large-6 columns">
+          <div class="pagination_info"><%= page_entries_info collection %></div>
+        </div>  
+        <div class="large-6 columns">
+          <%= render :partial => "record_shared/header", locals: { model: model, record: record, modules: @current_modules } %>
+        </div>
+      </div>
+    </div>
+    <div class="large-3 columns">
+    </div>  
+  </div>
+</div>
 <div class="row">
   <div class="large-9 columns">
-    <%= render :partial => "record_shared/header", locals: { model: model, record: record, modules: @current_modules } %>
     <div class="clearfix"></div>
 
     <%#
