--- a/app/views/tracing_requests/show.html.erb
+++ b/app/views/tracing_requests/show.html.erb
@@ -64,12 +64,12 @@ $(".profile-tools .investigated a").click( function(){
 <% end %>
     
 <div class="page-content-new row collapse" data-equalizer>
-  <div class="large-4 medium-4 columns close-side-tab">
+  <div class="large-4 medium-4 columns close-side-tab side-tab-container">
     <div class="side-tab" data-equalizer-watch>
       <%= render :partial => 'form_section/tabs', :object => @form_sections %>
     </div>
   </div>
-  <div class="large-8 medium-8 columns">
+  <div class="large-8 medium-8 columns side-tab-content-container">
     <div class="side-tab-content" data-equalizer-watch>
       <%# Removed for demo deploy %>
       <%= render :partial => 'shared/sidebar' if false %>
