more ui fixes and coloring

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -57,6 +57,7 @@ $body-font-family: $secondary-font-family;
 $secondary-bg: $grey_color;
 
 $button-font-color: $green_color;
+$button-function-factor: -8%;
 
 ////////////////////////////////////////////////
 // Foundation - Topbar overrides
