--- a/app/views/tracing_requests/show.html.erb
+++ b/app/views/tracing_requests/show.html.erb
@@ -51,7 +51,7 @@ $(".profile-tools .investigated a").click( function(){
 <% end %>
 
 <% content_for :breadcrumbs do %>
-  <%= t("tracing_request.label") %>: <%= text_to_identify_tracing_request(@tracing_request) %>
+  <%= t("tracing_request.label") %> #<%= text_to_identify_tracing_request(@tracing_request) %>
 <% end %>
 
 <% content_for :header_message do %>
