--- a/app/assets/stylesheets/primero.dataTables.scss
+++ b/app/assets/stylesheets/primero.dataTables.scss
@@ -20,7 +20,7 @@ table.dataTable thead td {
   padding: 10px 18px;
   border-right: 1px solid #ccc;
   border-top: 1px solid #ccc;
-  background: #ccc;
+  background: #ebf0e4 !important;
   font-size: 0.875rem
 }
 table.dataTable thead th:first-child {
