--- a/app/views/form_section/_audio_upload_box.html.erb
+++ b/app/views/form_section/_audio_upload_box.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="file medium-12 columns">
-    <%= label_tag "#{formObject.class.name.underscore.downcase}[audio]", "Recorded Audio", :class=>'key' %>
+    <%= label_tag "#{formObject.class.name.underscore.downcase}[audio]", "Recorded Audio", :class=>'key inline' %>
     <%= file_field_tag "#{formObject.class.name.underscore.downcase}[audio]" %>
 
     <ul class="audio_player_section">
