--- a/app/views/form_section/_check_boxes.html.erb
+++ b/app/views/form_section/_check_boxes.html.erb
@@ -7,7 +7,7 @@
 
 <div class="row">
   <div class="medium-4 columns">
-    <%= label_tag field_id, t(check_boxes.name, :default => check_boxes.display_name), {:class=>"key"}%>
+    <%= label_tag field_id, t(check_boxes.name, :default => check_boxes.display_name), {:class=>"key inline"}%>
   </div>
 
   <div class="medium-8 columns">
