--- a/app/views/form_section/_select_box.html.erb
+++ b/app/views/form_section/_select_box.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="medium-4 columns">
       <span class="tool-tip-label">
-        <%= label_tag field_id, t(select_box.name, :default => select_box.display_name), :class=>'key'  %>
+        <%= label_tag field_id, t(select_box.name, :default => select_box.display_name), :class=>'key inline'  %>
       </span>
   </div>
   <div class="medium-8 columns">
