--- a/app/views/form_section/_subform_expand_collapse_header.erb
+++ b/app/views/form_section/_subform_expand_collapse_header.erb
@@ -3,11 +3,9 @@
     view_mode ||= false 
 %>
 <div class="row collapse_expand_subform_header">
-  <div class="medium-4 columns">
+  <div class="medium-6 columns">
     <span><%= label_tag subform.name, t(subform.name, :default => subform.display_name.singularize), :class=>'key' %></span>
-  </div>
-  <div class="medium-8 columns">
-    <div class="medium-6 columns display_field">
+    <div class="display_field">
       <% fields_id=[]
          data_types=[]
          value_fields=[]
@@ -43,12 +41,12 @@
       <span data-fields="<%= fields_id.join(',') %>" data-types="<%= data_types.join(',') %>">
         <%= value_fields.reject(&:empty?).join(' - ') %>
       </span>
-      <% end %>
+      <% end %>      
     </div>
-    <div class="medium-6 columns header-btn-group">
-      <span class="collapse_expand_subform expanded">-</span>
-      <%= link_to t('fields.remove'), '', class: "subform_remove grey-button", 
-          data: { message: t('fields.subform_remove_message') } if current_actions(action: ['update', 'edit', 'new', 'create']) %>
-    </div>
+  </div>
+  <div class="medium-6 columns">
+    <span class="collapse_expand_subform expanded">-</span>
+    <%= link_to t('fields.remove'), '', class: "subform_remove grey-button", 
+        data: { message: t('fields.subform_remove_message') } if current_actions(action: ['update', 'edit', 'new', 'create']) %>
   </div>
 </div>
