--- a/app/views/form_section/_textarea.html.erb
+++ b/app/views/form_section/_textarea.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="medium-4 columns">
       <span class="tool-tip-label">
-          <%= label_tag field_id, t(textarea.name,:default => textarea.display_name), :class=>'key' %>
+          <%= label_tag field_id, t(textarea.name,:default => textarea.display_name), :class=>'key inline' %>
       </span>
   </div>
   <div class="medium-8 columns">
