--- a/app/views/form_section/_tick_box.html.erb
+++ b/app/views/form_section/_tick_box.html.erb
@@ -7,7 +7,7 @@
 
 <div class="row">
   <div class="medium-4 columns">
-    <%= label_tag field_id, t(tick_box.name, :default => tick_box.display_name), {:class=>"key"}%>
+    <%= label_tag field_id, t(tick_box.name, :default => tick_box.display_name), {:class=>"key inline"}%>
   </div>
 
   <div class="medium-8 columns">
