Implemented filtering by user for cases.

--- a/app/views/children/_cases_filter.html.erb
+++ b/app/views/children/_cases_filter.html.erb
@@ -3,12 +3,8 @@
   <form id="index_filter_form">
     <%= build_filter_checkboxes('Flagged:', 'flag', [
       {flag: 'flagged?'}
-    ]) %>    
-    <%= build_filter_checkboxes('Field/Case/Social Worker:', 'caseworker', [
-      'caseworker1',
-      'caseworker2',
-      'caseworker3',
     ]) %>
+    <%= build_filter_checkboxes('Field/Case/Social Worker:', 'users', @associated_users, false, false) %>
     <%= build_filter_checkboxes('Status:', 'child_status', [
       'all',
       'open',
