--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,2 +1,2 @@
 
-<%= render 'record_shared/list_view_table', model: Incident, record: 'incident', collection: @incidents %>
+<%= render 'record_shared/list_view_table', model: Incident, record: 'incident', collection: @incidents, controller_name: "incidents" %>
