--- a/app/views/contact_information/show.html.erb
+++ b/app/views/contact_information/show.html.erb
@@ -1,6 +1,9 @@
+<% content_for :breadcrumbs do %>
+  <%= I18n.t("contact.info_label") %>
+<% end %>
+
 <div class="row">
   <div class="large-12 columns">
-    <h1><%= I18n.t("contact.info_label") %></h1>
     <div class="contact_info_page">
       <% if false %>
           <div><%= t("contact.message") %></div>
