--- a/app/views/incidents/_incidents_filter.html.erb
+++ b/app/views/incidents/_incidents_filter.html.erb
@@ -12,7 +12,7 @@
       'denial_of_humanitarian_access',
       'other_violation'
     ], multi: true) %>    
-    <%= build_filter_checkboxes('Status:', 'child_status', [
+    <%= build_filter_checkboxes('Status:', 'status', [
       'all',
       'open',
       'closed',
