--- a/app/assets/stylesheets/primero.dataTables.scss
+++ b/app/assets/stylesheets/primero.dataTables.scss
@@ -1,3 +1,5 @@
+$stroke_green_color: #aec687;
+
 /*
  * Table styles
  */
@@ -18,13 +20,18 @@ table.dataTable {
 table.dataTable thead th,
 table.dataTable thead td {
   padding: 10px 18px;
-  border-right: 1px solid #ccc;
-  border-top: 1px solid #ccc;
+  border-right: 1px solid $stroke_green_color;
+  border-top: 1px solid $stroke_green_color;
   background: #ebf0e4 !important;
   font-size: 0.875rem
 }
+
+table.dataTable thead td {
+  background: #fff !important;
+}
+
 table.dataTable thead th:first-child {
-  border-left: 1px solid #ccc;
+  border-left: 1px solid $stroke_green_color;
 }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
@@ -66,13 +73,13 @@ table.dataTable tbody th,
 table.dataTable tbody td {
   padding: 15px 10px;
   border-bottom: 1px dashed #ccc;
-  border-right: 1px solid #ccc;
+  border-right: 1px solid $stroke_green_color;
 }
 table.dataTable tbody tr td:first-child {
-  border-left: 1px solid #ccc;
+  border-left: 1px solid $stroke_green_color;
 }
 table.dataTable tbody tr:last-child td {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid $stroke_green_color;
 }
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
   border-top: 1px solid #dddddd;
@@ -325,6 +332,15 @@ table.dataTable td {
   position: absolute;
   margin: -40px 0 0 0;
 }
+
+#list_table_wrapper .dataTables_paginate {
+  float: right;
+}
+
+#list_table_wrapper .dataTables_info {
+  display: none !important;
+}
+
 .dataTables_wrapper .dataTables_paginate {
   float: left;
   text-align: right;
