--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -1,60 +1,64 @@
-<h1 class="no_border">Roles</h1>
-<div class="page-content-new row">
-  <div class="medium-4 large-4 columns close-side-tab">
+<% content_for :breadcrumbs do %>
+  <%= t("roles.view") %> (<%= @role.name %>)
+<% end %>
+
+<% content_for :record_sub_nav do %>
+  <% if can? :update, @role %>
+    <a class="btn green-button" href="<%= edit_role_path @role %>">
+      <span class="edit"><%= t("buttons.edit") %></span>
+    </a>
+  <% end %>
+<% end %>
+
+<div class="page-content-new row collapse" data-equalizer>
+  <div class="medium-4 large-4 columns close-side-tab side-tab-container">
     <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'roles'} %>
   </div>
-  <div class="side-tab-content medium-8 large-8 columns">
-    <% if can? :update, @role %>
-      <a class="btn" href="<%= edit_role_path @role %>">
-        <span class="edit"><%= t("buttons.edit") %></span>
-      </a>
-    <% end %>
-
-    <h2>
-      <%= link_to t("roles.list"), roles_path %> &gt; <%= t("roles.view") %> (<%= @role.name %>)
-    </h2>
-
-    <div class="clearfix"></div>
-
-    <%= form_for @role, :html => {:class => ''} do |f| %>
-        <%= error_messages_for :role %>
-        <fieldset>
-          <div class="row">
-            <div class="medium-4 columns">
-              <%= f.label :name, t("name"), :class=>'key'  %>
-            </div>
-            <div class="medium-8 columns">
-              <span class="value"><%= @role.name %></span>
-            </div>
-          </div>
-          <div class="row">
-            <div class="medium-4 columns">
-              <%= f.label :description, t("description"), :class=>'key'  %>
-            </div>
-            <div class="medium-8 columns">
-              <%= @role.description %>
-            </div>
-          </div>
-          <div class="row">
-            <div class="medium-4 columns">
-              <%= f.label :permissions, t("permissions.label"), :class=>'key'  %>
-            </div>
-            <div class="medium-8 columns">
-              <span class="value">
-                <% translated_permissions.each do |group_name, permissions| %>
-                    <span class="section">
-                      <span class="title"><%= t("permissions.#{group_name}") %></span>
-                      <% Hash[*permissions.flatten].values.each do |permission| %>
-                        <label><%= f.check_box :permissions, {:id => permission.dehumanize, :name => "role[permissions][]", :disabled => "disabled"}, permission, "" %>
-                          <%= t("permissions.permission.#{permission}") %></label>
-                        <% end %>
+  <div class="medium-8 large-8 columns side-tab-content-container">
+    <div class="side-tab-content" data-equalizer-watch>
+      <div class="row">
+        <div class="large-12 columns">
+          <%= form_for @role, :html => {:class => ''} do |f| %>
+              <%= error_messages_for :role %>
+              <fieldset class="no-border">
+                <div class="row">
+                  <div class="medium-4 columns">
+                    <%= f.label :name, t("name"), :class=>'key'  %>
+                  </div>
+                  <div class="medium-8 columns">
+                    <span class="value"><%= @role.name %></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="medium-4 columns">
+                    <%= f.label :description, t("description"), :class=>'key'  %>
+                  </div>
+                  <div class="medium-8 columns">
+                    <%= @role.description %>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="medium-4 columns">
+                    <%= f.label :permissions, t("permissions.label"), :class=>'key'  %>
+                  </div>
+                  <div class="medium-8 columns">
+                    <span class="value value_form">
+                      <% translated_permissions.each do |group_name, permissions| %>
+                          <span class="section section-show">
+                            <span class="title"><%= t("permissions.#{group_name}") %></span>
+                            <% Hash[*permissions.flatten].values.each do |permission| %>
+                              <label><%= f.check_box :permissions, {:id => permission.dehumanize, :name => "role[permissions][]", :disabled => "disabled"}, permission, "" %>
+                                <%= t("permissions.permission.#{permission}") %></label>
+                              <% end %>
+                          </span>
+                      <% end %>
                     </span>
-                <% end %>
-              </span>
-            </div>
-          </div>
-        </fieldset>
-    <% end %>
-
+                  </div>
+                </div>
+              </fieldset>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
