--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -28,7 +28,7 @@
   <p class='notice'><%= flash[:verify] %></p>
 </div>
 <% end %>
-<%= form_for editable_user, :html => {:class => ''} do |f| %>
+<%= form_for editable_user, :html => {:class => 'default-form'} do |f| %>
     <div class="clearfix"></div>
     <%= f.error_messages :header_tag => :h3 %>
     <% trying_to_edit_ourself = editing_ourself?(editable_user) %>
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :full_name, t("user.full_name"), :class=>'key' %>
+          <%= f.label :full_name, t("user.full_name"), :class=>'key inline' %>
         </span>
       </div>
       <div class="medium-8 columns">
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label  :user_name, t("login.username"), :class=>'key'  %>
+          <%= f.label  :user_name, t("login.username"), :class=>'key inline'  %>
         </span>
       </div>
       <div class="medium-8 columns">
@@ -69,7 +69,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :password, t('login.password.label'), :class=>'key'  %>
+          <%= f.label :password, t('login.password.label'), :class=>'key inline'  %>
         </span>
       </div>
       <div class="medium-8 columns">
@@ -83,7 +83,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :password_confirmation,t("login.password.re_enter"), :class=>'key'  %>
+          <%= f.label :password_confirmation,t("login.password.re_enter"), :class=>'key inline'  %>
         </span>
       </div>
       <div class="medium-8 columns">
@@ -116,7 +116,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :phone, t("phone"), :class=>'key'  %>
+          <%= f.label :phone, t("phone"), :class=>'key inline'  %>
         </span>
       </div>
       <div class="medium-8 columns">
@@ -128,7 +128,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :email, t("email"), :class=>'key'  %>
+          <%= f.label :email, t("email"), :class=>'key inline'  %>
         </span>
       </div>  
       <div class="medium-8 columns">
@@ -140,7 +140,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :organisation, t("organisation"), :class=>'key'  %>
+          <%= f.label :organisation, t("organisation"), :class=>'key inline'  %>
         </span>
       </div>
       <div class="medium-8 columns">
@@ -154,7 +154,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :position, t("position"), :class=>'key'  %>
+          <%= f.label :position, t("position"), :class=>'key inline'  %>
         </span>
       </div>
       <div class="medium-8 columns">
@@ -166,7 +166,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <%= f.label :location, t("location"), :class=>'key'  %>
+          <%= f.label :location, t("location"), :class=>'key inline'  %>
         </span>
       </div>
       <div class="medium-8 columns">
@@ -179,7 +179,7 @@
         <div class="row">
           <div class="medium-3 columns">
             <span class="tool-tip-label">
-              <%= f.label :disabled, t("user.disabled"), :class=>'key' %>
+              <%= f.label :disabled, t("user.disabled"), :class=>'key inline' %>
             </span>
           </div>
           <div class="medium-8 columns">
@@ -193,10 +193,8 @@
 
     </fieldset>
 
-    <div class="btn_panel">
+    <% content_for :record_sub_nav do %>
     <!--TODO: After we got the user object in the session replace the DB query with User object-->
-      <%= cancel_button(users_path) %>
-      <%= submit_button(editable_user.new_record? ? t("user.create") : (params[:verify] ? t('user.verify') : t('user.update'))) %>
-      <div class="clearfix"></div>
-    </div>
+      <%= render_controls(@user) %> 
+    <% end %>
 <% end %>
