--- a/app/views/users/_users_table.html.erb
+++ b/app/views/users/_users_table.html.erb
@@ -1,20 +1,28 @@
-<h2><%= t("users.label") %></h2>
-
-<% if can? :create,User %>
-    <%= link_to content_tag(:span, t("users.create"), :class => 'create_user'), new_user_path, :class => 'btn' %>
+<% content_for :record_sub_nav_controls do %>
+  <% if can? :create,User %>
+      <%= link_to content_tag(:span, t("users.create"), :class => 'create_user'), new_user_path, :class => 'btn green-button' %>
+  <% end %>
 <% end %>
-<div class="clearfix"></div>
-
-<form class="filter_bar">
-    <div class="show_count"> <%= t("users.actions.show_all") %> <%= pluralize(@users.length, t("user.label")) %> </div>
-    <div class="float_left"> <%= t("users.actions.show") %>: <%= select_tag :filter, options_for_select([[t("children.filer_by.active"),"active"],[ t("children.filer_by.all"), "all" ]], params[:filter]), { :onchange => "this.form.submit();"} %> </div>
-    <div class="float_left"> <%= t("users.sort_by.label") %>:  <%= select_tag :sort, options_for_select([[t("users.sort_by.full_name"),"full_name"],[ t("login.username"), "user_name"]], params[:sort]), { :onchange => "this.form.submit();"} %> </div>
-</form>
-<table id="users" class="list_table">
-  <thead>
-  <%= render :partial => 'users_header' %>
-  </thead>
-  <tbody>
-  <%= render :partial => 'user', :collection => @users %>
-  </tbody>
-</table>
+<div class="row">
+  <div class="large-12 columns">
+    <form class="filter_bar">
+      <div class="row">
+        <div class="medium-6 columns">
+            <div class="float_left"> <%= t("users.actions.show") %>: <%= select_tag :filter, options_for_select([[t("children.filer_by.active"),"active"],[ t("children.filer_by.all"), "all" ]], params[:filter]), { :onchange => "this.form.submit();"} %> </div>
+        </div>
+        <div class="medium-6 columns">
+          <div class="float_left"> <%= t("users.sort_by.label") %>:  <%= select_tag :sort, options_for_select([[t("users.sort_by.full_name"),"full_name"],[ t("login.username"), "user_name"]], params[:sort]), { :onchange => "this.form.submit();"} %> </div>
+        </div>
+      </div>
+    </form>
+    <div class="show_count"> <%= t("users.actions.show_all") %> <%= pluralize(@users.length, t("user.label")) %></div>
+    <table id="list_table" class="list_table">
+      <thead>
+        <%= render :partial => 'users_header' %>
+      </thead>
+      <tbody>
+        <%= render :partial => 'user', :collection => @users %>
+      </tbody>
+    </table>
+  </div>
+</div>
