--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,26 @@
 <% content_for :breadcrumbs do %>
-  <div><h2><%= link_to I18n.t("users.label"), users_path %> &gt; <%= @user.user_name %></h2></div>
+  <%= link_to I18n.t("users.label"), users_path %>: <%= @user.user_name %>
 <% end %>
-<div class="page-content-new row">
-  <div class="medium-4 large-4 columns close-side-tab">
+
+
+<div class="page-content-new row collapse" data-equalizer>
+  <div class="medium-4 large-4 columns close-side-tab side-tab-container">
     <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'users'} %>
   </div>
-  <div class="side-tab-content medium-8 large-8 columns">
-    <h1 class="no_border"><%= t("users.manage") %></h1>
-    <% if false %>
-    <%= link_to user_history_path(@user), :class=>'green-button small right' do %>
-        <%= icon('clock-o') %>
-        <span class="log"><%= t("user.user_action_history") %></span>
-    <% end %>
-    <% end %>
-    <div class="clearfix"></div>
-
-    <%= render :partial => "editable_user", :object => @user %>
-    <%= render :partial => "mobile_login_history", :object => @user if false %>
+  <div class="medium-8 large-8 columns side-tab-content-container">
+    <div class="side-tab-content" data-equalizer-watch>
+      <% if false %>
+      <%= link_to user_history_path(@user), :class=>'green-button small right' do %>
+          <%= icon('clock-o') %>
+          <span class="log"><%= t("user.user_action_history") %></span>
+      <% end %>
+      <% end %>
+      <div class="row">
+        <div class="large-12 columns">
+          <%= render :partial => "editable_user", :object => @user %>
+          <%= render :partial => "mobile_login_history", :object => @user if false %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
