--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,23 +6,27 @@
     });
 </script>
 
-<h1><%= t("users.manage") %></h1>
+<% content_for :breadcrumbs do %>
+  <%= t("users.manage") %>
+<% end %>
 
-<div class="page-content-new row">
-  <div class="large-4 medium-4 columns close-side-tab">
-  <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'users'} %>
+<% content_for :record_sub_nav do %>
+  <%= link_to t("buttons.back"), :back, class: 'btn grey-button' %>
+<% end %>
+
+<div class="page-content-new row collapse" data-equalizer>
+  <div class="large-4 medium-4 columns close-side-tab side-tab-container">
+    <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'users'} %>
   </div>
-  <div class="side-tab-content large-8 medium-8 columns">
-    <% if @access_error.present? %>
-        <strong><%= @access_error %></strong>
-    <% end %>
-    <% if @users.present? %>
-        <%= render :partial => 'users_table' %>
-        <p><%= link_to t("buttons.back"), :back %></p>
-
-        <div id="modal-dialog"/>
-    <% end %>
-
+  <div class="large-8 medium-8 columns side-tab-content-container">
+    <div class="side-tab-content" data-equalizer-watch>
+      <% if @access_error.present? %>
+          <strong><%= @access_error %></strong>
+      <% end %>
+      <% if @users.present? %>
+          <%= render :partial => 'users_table' %>
+          <div id="modal-dialog"/>
+      <% end %>
+    </div>
   </div>
-
 </div>
