--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :breadcrumbs do %>
-<h2 class="float_left no_border"><%= link_to(I18n.t("users.label"), users_path) + " > " if can?(:read, User)%>  <%= @user.user_name %>
+  <%= link_to(I18n.t("users.label"), users_path) + ": " if can?(:read, User)%>  <%= @user.user_name %>
   <%# TODO: Removing the edit link temporarily %>
   <% if false %>
   <% if can? :edit, User %>
@@ -8,120 +8,121 @@
       <%=	link_to "(" + I18n.t("buttons.change_password") +")", change_password_users_path %>
   <% end %>
   <% end %>
-</h2>
 <% end %>
-<div class="page-content-new row">
-  <div class="large-4 medium-4 columns close-side-tab">
+
+<div class="page-content-new row collapse" data-equalizer>
+  <div class="large-4 medium-4 columns close-side-tab side-tab-container">
     <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => ''} %>
   </div>
-  <div class="side-tab-content large-8 medium-8 columns">
-    <h1 class="no_border"><%= t("users.account_details") %></h1>
-    <%# TODO: We removed user history. We will need to put that back in %>
-    <% if false %>
-    <%= link_to user_history_path(@user), :class=>'green-button small right' do %>
-        <%= icon('clock-o') %>
-        <span class="log"><%= t("user.user_action_history") %></span>
-    <% end %>
-    <% end %>
-    <div class="clearfix"></div>
-    <fieldset class="no-border">
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("name") %>:</label>
+  <div class="large-8 medium-8 columns side-tab-content-container">
+    <div class="side-tab-content" data-equalizer-watch>
+      <%# TODO: We removed user history. We will need to put that back in %>
+      <% if false %>
+      <%= link_to user_history_path(@user), :class=>'green-button small right' do %>
+          <%= icon('clock-o') %>
+          <span class="log"><%= t("user.user_action_history") %></span>
+      <% end %>
+      <% end %>
+      <div class="clearfix"></div>
+      <fieldset class="no-border">
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("name") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= h @user.full_name %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= h @user.full_name %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("login.username")%>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("login.username")%>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= h @user.user_name %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= h @user.user_name %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("permissions.label") %>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("permissions.label") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= @user.roles.map(&:name).join(", ") %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= @user.roles.map(&:name).join(", ") %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("contact.field.phone") %>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("contact.field.phone") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= h @user.phone %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= h @user.phone %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("email") %>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("email") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= h @user.email %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= h @user.email %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("organisation") %>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("organisation") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= h @user.organisation %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= h @user.organisation %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("position") %>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("position") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= h @user.position %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= h @user.position %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("location") %>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("location") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= h @user.location %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= h @user.location %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label class="key"><%= t("status") %>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label class="key"><%= t("status") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+            <%= h @user.disabled ? t("user.disabled") : t("enabled") %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-          <%= h @user.disabled ? t("user.disabled") : t("enabled") %>
-        </div>
-      </div>
 
-      <div class="row">
-        <div class="medium-4 columns">
-          <label><%= t("devices") %>:</label>
+        <div class="row">
+          <div class="medium-4 columns">
+            <label><%= t("devices") %>:</label>
+          </div>
+          <div class="medium-8 columns">
+          <% @user.devices.each do |device| %>
+              <% if device.blacklisted? %>
+                  <span class='device-blacklisted'><%= device.imei %> (blacklisted)</span><br/>
+              <% else %>
+                  <%= device.imei %> <br/>
+              <% end %>
+          <% end %>
+          </div>
         </div>
-        <div class="medium-8 columns">
-        <% @user.devices.each do |device| %>
-            <% if device.blacklisted? %>
-                <span class='device-blacklisted'><%= device.imei %> (blacklisted)</span><br/>
-            <% else %>
-                <%= device.imei %> <br/>
-            <% end %>
-        <% end %>
-        </div>
-      </div>
 
-    </fieldset>
-    <%= render :partial => "mobile_login_history", :object => @user if false %>
+      </fieldset>
+      <%= render :partial => "mobile_login_history", :object => @user if false %>
+    </div>
   </div>
 </div>
