highlight hidden forms on form index

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1302,3 +1302,10 @@ fieldset {
     border: none !important
   }
 }
+
+////////////////////////////////////////////////
+// Form Customization
+////////////////////////////////////////////////
+li.hidden_form a {
+  color: $red_color;
+}
