--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -9,7 +9,16 @@
           <%= t("forms.initial_language") %> : <span><%= t("home.#{I18n.default_locale}") %></span>
         </div>
         <fieldset>
-
+          <% unless @form_section.perm_enabled? %>
+            <div class="row">
+              <div class="medium-3 columns">
+                <%= f.label :visible, t("visible", :locale => I18n.default_locale), :class => 'key' %>
+              </div>
+              <div class="medium-9 columns">
+                <%= f.check_box :visible?, {}, "true", "false" %>
+              </div>
+            </div>
+          <% end %>
           <div class="row">
             <div class="medium-3 columns">
               <%= f.label :name, t("name", :locale => I18n.default_locale), :class => 'key' %>
@@ -47,18 +56,17 @@
         </fieldset>
       </div>
       <div class="translation_lang_panel">
-        <%= render :partial => "shared/add_translations", :locals => {:fields => [{:name => :text_field}, {:description => :text_field}, {:help_text => :text_field}], :f => f, :show_drop_down => true} %>
+        <div class="row">
+          <div class="medium-12 columns">
+            <%= render :partial => "shared/add_translations", :locals => {:fields => [{:name => :text_field}, {:description => :text_field}, {:help_text => :text_field}], :f => f, :show_drop_down => true} %>
+          </div>
+        </div>
       </div>
 
       <div class="clearfix"></div>
 
 
-      <% if not @form_section.perm_enabled? %>
-          <p class="chkbox_visible">
-            <%= f.label :visible, t("visible"), :class => 'key' %>
-            <%= f.check_box :visible?, {}, "true", "false" %>
-          </p>
-      <% end %>
+
       <div class="btn_panel">
         <%= cancel_button(form_sections_path) %>
         <%= submit_button t("forms.save_details") %>
