Fixed content/sidebar equality and styling fixes to document upload

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -311,6 +311,11 @@ input[type="text"][disabled]{
   border: none !important;
 }
 
+.file {
+  border-bottom: 1px solid $stroke_green_color;
+  margin: 0 40px;
+}
+
 ////////////////////////////////////////////////
 // Fields
 ////////////////////////////////////////////////
