--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -35,18 +35,24 @@
     </div>
   <% end %>
 <% end %>
-<div>
+<div id="file_container">
   <div id="file-group">
-    <div class="row">
-      <div class="file medium-12 columns">
-        <span class="tool-tip-label">
-          <%= label_tag "child[upload_document][0][document]", "Add Document", :class=>'key' %>
-        </span>
-        <%= file_field_tag "child[upload_document][0][document]", :id => "child_upload_document_0_document" %>
-        <%= image_tag "new/icon_help.png", title: document_upload_box.help_text, class: 'tool-tip-icon vtip' if document_upload_box.help_text.present? %>
+    <div class="file">
+      <div class="row">
         <div class="medium-4 columns">
           <span class="tool-tip-label">
-            <%= label_tag "child[upload_document][0][document_description]", "Document Description", :class=>'key' %>
+            <%= label_tag "child[upload_document][0][document]", "Add Document", :class=>'key inline' %>
+          </span>
+        </div>
+        <div class="medium-8 columns">
+          <%= file_field_tag "child[upload_document][0][document]", :id => "child_upload_document_0_document" %>
+          <%= image_tag "new/icon_help.png", title: document_upload_box.help_text, class: 'tool-tip-icon vtip' if document_upload_box.help_text.present? %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="medium-4 columns">
+          <span class="tool-tip-label">
+            <%= label_tag "child[upload_document][0][document_description]", "Document Description", :class=>'key inline' %>
           </span>
         </div>
         <div class="medium-8 columns">
@@ -67,6 +73,9 @@
     <span class="ui-button-text"><%= I18n.t("cases.ok") %></span>
     </button>
   </div>
-  <%= link_to 'Add another document', '', id: 'add-document', class: 'green-button right' %>
+  <div class="row">
+    <div class="large-12 columns">
+      <%= link_to 'Add another document', '', id: 'add-document', class: 'green-button right' %>
+    </div>
+  </div>
 </div>
-<hr>
