Removed ? for date help and made it help text below the field.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -316,6 +316,17 @@ input[type="text"][disabled]{
   margin: 0 40px;
 }
 
+p.help {
+  background: none !important;
+  padding: 0;
+  font-size: 0.8rem;
+  color: $green_color;
+}
+
+.has_help {
+  margin-bottom: 2px !important;
+}
+
 ////////////////////////////////////////////////
 // Fields
 ////////////////////////////////////////////////
