--- a/app/views/form_section/_date_field.html.erb
+++ b/app/views/form_section/_date_field.html.erb
@@ -12,7 +12,7 @@
     </span>
   </div>
   <div class="medium-8 columns">
-    <%= text_field_tag name, value, :class => 'form_date_field', :id => field_id, :disabled => date_field.editable == false ? true : false %>
-    <%= image_tag "new/icon_help.png", class: 'tool-tip-icon vtip', title: date_field.help_text.present? ? date_field.help_text: "(dd-mmm-yyyy)" %>
+    <%= text_field_tag name, value, :class => 'form_date_field has_help', :id => field_id, :disabled => date_field.editable == false ? true : false %>
+    <p class="help"><%= t("fields.date_help") %></p>
   </div>
 </div>
