implementing New Form functionality

--- a/app/views/form_section/new.html.erb
+++ b/app/views/form_section/new.html.erb
@@ -1,7 +1,7 @@
 <h1 class="no_border">Forms</h1>
 <div class="page-content-new form_page">
   <div class="side-tab-content full_width">
-  <div><%= t("forms.messages.use_existing") %></div>
+    <div class="row"><div class="medium-12 columns"><%= t("forms.messages.use_existing") %></div></div>
     <%= render :partial => 'form_section/new_or_edit_form_section' %>
   </div>
 </div>
