--- a/app/views/form_section/_new_or_edit_form_section.html.erb
+++ b/app/views/form_section/_new_or_edit_form_section.html.erb
@@ -1,7 +1,12 @@
-<%= error_messages_for  :form_section,
-                        :header_tag => :h3,
-                        :header_message => t("form_section.messages.cannot_create"),
-                        :message => t('form_section.messages.correct_errors') %>
+<div class="row">
+  <div class="medium-12 columns">
+    <%= error_messages_for  :form_section,
+                            :header_tag => :h3,
+                            :header_message => t("form_section.messages.cannot_create"),
+                            :message => t('form_section.messages.correct_errors') %>
+  </div>
+</div>
+
   <%= form_for @form_section, :url => url_for_form_section(@form_section), :html => {:class => ""} do |f| %>
     <div class="form_details_panel">
       <div class="default_lang_panel">
@@ -9,6 +14,11 @@
           <%= t("forms.initial_language") %> : <span><%= t("home.#{I18n.default_locale}") %></span>
         </div>
         <fieldset>
+          <%= hidden_field_tag "module_id", @module_id, :id => "form_section_parent_form" %>
+          <%= hidden_field_tag "form_section[parent_form]", @parent_form, :id => "form_section_parent_form" %>
+          <%= hidden_field_tag "form_section[order]", @form_section.order, :id => "form_section_order" %>
+          <%= hidden_field_tag "form_section[order_form_group]", @form_section.order_form_group, :id => "form_section_order_form_group" %>
+
           <% unless @form_section.perm_enabled? %>
             <div class="row">
               <div class="medium-3 columns">
