PRIMERO-516 fixes for Tracing Request form. PRIMERO-517 fix Incident form display. Fix Incident label. Fix Tracing request label. Fix Tracing request form order.

--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -33,7 +33,7 @@ $(function() {
 <% end %>
 
 <% content_for :breadcrumbs do %>
-  <%= t("incidents.label") %> #<%= text_to_identify_incident(@incident) %>
+  <%= t("incident.label") %> #<%= text_to_identify_incident(@incident) %>
 <% end %>
 
 <% content_for :header_message do %>
