Added popovers for guided questions

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -311,6 +311,11 @@ input[type="text"][disabled]{
   border: none !important;
 }
 
+.gq_popovers {
+  padding: 0;
+  font-size: $thirteen_px;
+}
+
 ////////////////////////////////////////////////
 // Fields
 ////////////////////////////////////////////////
